Improves accessibility and seo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guillermo Macchi - Resume</title>
+    <meta name="description" content="Full stack developer with 8+ years of experience. HTML, CSS, Javascript, React JS, Django." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
     <nav>
         <div class="content">
             <div class="mobile-menu">
-                <button id="menu-button" aria-controls="mobile-menu">
+                <button id="menu-button" aria-controls="mobile-menu" aria-label="Navigation Menu">
                     <div>
                         <div></div>
                         <div></div>
@@ -282,7 +283,7 @@
                 </article>
                 <article>
                     <h3>Certificates</h3>
-                    <ul>
+                    <ul id="certificates">
                         <li><a href="https://ude.my/UC-Y086QMHZ">Node: From zero to expert</a></li>
                         <li><a href="https://coursera.org/share/cf3f0c9dd592876e25e83a82ea4524b1">Fundamentals of React
                                 hook</a></li>
